--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="강동구 퀵서비스 전문. 천호동, 성내동, 고덕동, 상일동 전지역 15분 내 신속 픽업. 오토바이, 다마스, 라보 맞춤 배차 및 기업 법인 결제 지원.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://kangdonggu.8222quick.com/">
-
+    <link rel="icon" href="https://8222quick.com/img/favicon.png">
     <meta property="og:title" content="강동구 퀵서비스 | 에이플러스 강동구퀵">
     <meta property="og:description" content="강동구 전지역 24시 실시간 배차, 고덕비즈밸리·천호역 중심 초고속 퀵배송">
     <meta property="og:url" content="https://kangdonggu.8222quick.com/">
@@ -190,4 +190,5 @@
 </div>
 
 </body>
+
 </html>
